# MotionMatch

./: .env.example  .gitignore  LICENSE  QUICK_START.md  README.md  clear_index.py  example.py  pyproject.toml  requirements.txt  setup.py  start.py
benchmarks/: README.md  __init__.py  baseline_comparison.py  benchmark_runner.py  compare_runs.py  evaluation_metrics.py  semantic_accuracy_test.py  small_dataset_evaluation.py  test_performance.py
docker/: Dockerfile  docker-compose.yml
docs/: API.md  ARCHITECTURE.md  DEPLOYMENT.md  TECHNICAL_NOTES.md
scripts/: cleanup_old_files.py  download_samples.py  fix_imports.py  refactor_codebase.py  setup.py  start_services.py  validate_installation.py  validate_setup.py
src/motionmatch/: __init__.py
src/motionmatch/api/: main.py
src/motionmatch/core/: config.py
src/motionmatch/db/: models.py  postgres.py  vector_db.py
src/motionmatch/services/: anomaly_detection.py  encoder.py  indexing.py  search.py
src/motionmatch/services/preprocessing/: roi_detection.py  shot_segmentation.py
src/motionmatch/workers/: celery_app.py  tasks.py
static/: index.html
tests/: test_anomaly_ucf101.py  test_features.py
tests/integration/: test_api_client.py  test_full_system.py  test_setup.py  test_validation.py  test_vjepa2.py
